--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -1,9 +1,9 @@
 object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Left = 0
-  Height = 573
+  Height = 585
   Top = 0
   Width = 597
-  ClientHeight = 573
+  ClientHeight = 585
   ClientWidth = 597
   LCLVersion = '4.99.0.0'
   TabOrder = 0
@@ -148,13 +148,13 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   end
   object GBSearch: TGroupBox
     Left = 0
-    Height = 130
+    Height = 143
     Top = 413
     Width = 597
     Align = alTop
     AutoSize = True
     Caption = 'Search'
-    ClientHeight = 101
+    ClientHeight = 114
     ClientWidth = 593
     TabOrder = 2
     object CBMatchOnlyFilename: TCheckBox
@@ -185,22 +185,48 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       Left = 8
       Height = 22
       Top = 50
-      Width = 531
+      Width = 305
       BorderSpacing.Top = 3
-      Caption = 'letters of search term can be non consecutive (other letters can appear in between)'
+      Caption = 'Letters of search term can be non consecutive'
       TabOrder = 2
       OnChange = CBUseLettersChange
     end
     object CBpartialMatch: TCheckBox
       AnchorSideTop.Control = CBUseLetters
       AnchorSideTop.Side = asrBottom
-      Left = 36
+      Left = 384
       Height = 22
       Top = 72
       Width = 142
       BorderSpacing.Bottom = 7
       Caption = 'Allow partial match'
       TabOrder = 3
+      Visible = False
+    end
+    object seMinSearchLen: TSpinEdit
+      AnchorSideLeft.Control = lbMinSearchLen
+      AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = CBUseLetters
+      AnchorSideTop.Side = asrBottom
+      Left = 196
+      Height = 32
+      Top = 75
+      Width = 64
+      BorderSpacing.Left = 6
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 7
+      TabOrder = 4
+    end
+    object lbMinSearchLen: TLabel
+      AnchorSideLeft.Control = CBUseLetters
+      AnchorSideTop.Control = seMinSearchLen
+      AnchorSideTop.Side = asrCenter
+      Left = 11
+      Height = 18
+      Top = 82
+      Width = 179
+      BorderSpacing.Left = 3
+      Caption = 'Minimum search term length'
     end
   end
   object GBFileTree: TGroupBox
