FileBrowser: Fix a memory leak.

--- a/components/filebrowser/frmfilebrowser.lfm
+++ b/components/filebrowser/frmfilebrowser.lfm
@@ -10,6 +10,7 @@ object FileBrowserForm: TFileBrowserForm
   LCLVersion = '4.99.0.0'
   OnActivate = FormActivate
   OnCreate = FormCreate
+  OnDestroy = FormDestroy
   OnShow = FormShow
   object TV: TTreeView
     Left = 0
