--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -1,9 +1,9 @@
 object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Left = 0
-  Height = 585
+  Height = 616
   Top = 0
   Width = 597
-  ClientHeight = 585
+  ClientHeight = 616
   ClientWidth = 597
   LCLVersion = '4.99.0.0'
   TabOrder = 0
@@ -11,23 +11,23 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   DesignTop = 247
   object GBStartDir1: TGroupBox
     Left = 0
-    Height = 160
+    Height = 165
     Top = 0
     Width = 597
     Align = alTop
     AutoSize = True
     Caption = 'Root directory'
-    ClientHeight = 142
-    ClientWidth = 595
+    ClientHeight = 136
+    ClientWidth = 593
     TabOrder = 0
     object DERootDir: TDirectoryEdit
       AnchorSideTop.Control = RBRootThisDir
       AnchorSideTop.Side = asrBottom
       AnchorSideBottom.Side = asrBottom
       Left = 32
-      Height = 34
-      Top = 101
-      Width = 554
+      Height = 32
+      Top = 97
+      Width = 552
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
@@ -41,9 +41,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = RBRootUserDir
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 78
-      Width = 191
+      Height = 22
+      Top = 75
+      Width = 175
       BorderSpacing.Top = 3
       Caption = 'Always use this directory'
       TabOrder = 1
@@ -53,18 +53,18 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = RBRootUseProjectDir
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 26
-      Width = 131
+      Height = 22
+      Top = 25
+      Width = 117
       BorderSpacing.Top = 3
       Caption = 'Filesystem root'
       TabOrder = 2
     end
     object RBRootUseProjectDir: TRadioButton
       Left = 8
-      Height = 23
+      Height = 22
       Top = 0
-      Width = 220
+      Width = 199
       BorderSpacing.Left = 8
       Caption = 'Use current project directory'
       Checked = True
@@ -76,9 +76,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = RBRootFileSystemRoot
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 52
-      Width = 122
+      Height = 22
+      Top = 50
+      Width = 111
       BorderSpacing.Top = 3
       Caption = 'User directory'
       TabOrder = 4
@@ -86,22 +86,22 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   end
   object GBStartDir: TGroupBox
     Left = 0
-    Height = 134
-    Top = 160
+    Height = 140
+    Top = 165
     Width = 597
     Align = alTop
     AutoSize = True
     Caption = 'Initial directory'
-    ClientHeight = 116
-    ClientWidth = 595
+    ClientHeight = 111
+    ClientWidth = 593
     TabOrder = 1
     object DEStartDir: TDirectoryEdit
       AnchorSideTop.Control = RBThisDir
       AnchorSideTop.Side = asrBottom
       Left = 32
-      Height = 34
-      Top = 75
-      Width = 552
+      Height = 32
+      Top = 72
+      Width = 550
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
@@ -115,9 +115,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = RBLastDir
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 52
-      Width = 191
+      Height = 22
+      Top = 50
+      Width = 175
       BorderSpacing.Top = 3
       Caption = 'Always use this directory'
       TabOrder = 1
@@ -127,18 +127,18 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = RBUseProjectDir
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 26
-      Width = 198
+      Height = 22
+      Top = 25
+      Width = 180
       BorderSpacing.Top = 3
       Caption = 'Use last opened directory'
       TabOrder = 2
     end
     object RBUseProjectDir: TRadioButton
       Left = 8
-      Height = 23
+      Height = 22
       Top = 0
-      Width = 220
+      Width = 199
       BorderSpacing.Left = 8
       Caption = 'Use current project directory'
       Checked = True
@@ -148,20 +148,20 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   end
   object GBSearch: TGroupBox
     Left = 0
-    Height = 137
-    Top = 394
+    Height = 163
+    Top = 413
     Width = 597
     Align = alTop
     AutoSize = True
     Caption = 'Search'
-    ClientHeight = 119
-    ClientWidth = 595
+    ClientHeight = 134
+    ClientWidth = 593
     TabOrder = 2
     object CBMatchOnlyFilename: TCheckBox
       Left = 8
-      Height = 23
+      Height = 22
       Top = 0
-      Width = 223
+      Width = 207
       BorderSpacing.Left = 8
       Caption = 'Search matches only filename'
       TabOrder = 0
@@ -171,9 +171,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = CBMatchOnlyFilename
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 26
-      Width = 191
+      Height = 22
+      Top = 25
+      Width = 176
       BorderSpacing.Top = 3
       Caption = 'Show absolute filenames'
       TabOrder = 1
@@ -183,9 +183,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = CBUseAbsoluteFilenames
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 52
-      Width = 331
+      Height = 22
+      Top = 50
+      Width = 305
       BorderSpacing.Top = 3
       Caption = 'Letters of search term can be non consecutive'
       TabOrder = 2
@@ -194,56 +194,58 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
     object CBpartialMatch: TCheckBox
       AnchorSideTop.Control = CBUseLetters
       AnchorSideTop.Side = asrBottom
-      Left = 384
-      Height = 23
-      Top = 75
-      Width = 156
-      BorderSpacing.Bottom = 7
+      Left = 36
+      Height = 22
+      Top = 72
+      Width = 142
       Caption = 'Allow partial match'
       TabOrder = 3
     end
     object seMinSearchLen: TSpinEdit
       AnchorSideLeft.Control = lbMinSearchLen
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = CBUseLetters
+      AnchorSideTop.Control = CBpartialMatch
       AnchorSideTop.Side = asrBottom
-      Left = 208
-      Height = 34
-      Top = 78
+      Left = 196
+      Height = 32
+      Top = 95
       Width = 64
       BorderSpacing.Left = 6
-      BorderSpacing.Top = 3
+      BorderSpacing.Top = 1
       BorderSpacing.Bottom = 7
+      MaxValue = 100000
+      MinValue = 1
       TabOrder = 4
+      Value = 1
     end
     object lbMinSearchLen: TLabel
       AnchorSideLeft.Control = CBUseLetters
       AnchorSideTop.Control = seMinSearchLen
       AnchorSideTop.Side = asrCenter
       Left = 11
-      Height = 17
-      Top = 87
-      Width = 191
+      Height = 18
+      Top = 102
+      Width = 179
       BorderSpacing.Left = 3
       Caption = 'Minimum search term length'
     end
   end
   object GBFileTree: TGroupBox
     Left = 0
-    Height = 100
-    Top = 294
+    Height = 108
+    Top = 305
     Width = 597
     Align = alTop
     AutoSize = True
     Caption = 'File browser tree'
-    ClientHeight = 82
-    ClientWidth = 595
+    ClientHeight = 79
+    ClientWidth = 593
     TabOrder = 3
     object CBShowFilesInline: TCheckBox
       Left = 8
-      Height = 23
+      Height = 22
       Top = 0
-      Width = 207
+      Width = 194
       BorderSpacing.Left = 8
       Caption = 'Show files in main tree view'
       TabOrder = 0
@@ -253,9 +255,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = CBShowFilesInline
       AnchorSideTop.Side = asrBottom
       Left = 36
-      Height = 23
-      Top = 26
-      Width = 218
+      Height = 22
+      Top = 25
+      Width = 197
       BorderSpacing.Top = 3
       Caption = 'Show directories before files'
       TabOrder = 1
@@ -265,9 +267,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       AnchorSideTop.Control = CBShowDirectoriesBeforeFiles
       AnchorSideTop.Side = asrBottom
       Left = 8
-      Height = 23
-      Top = 52
-      Width = 304
+      Height = 22
+      Top = 50
+      Width = 279
       BorderSpacing.Top = 3
       BorderSpacing.Bottom = 7
       Caption = 'Keep synchronized with current editor file'
