IDE, Debugger: Watches, allow drag/drop from locals window. Add interface/API for drag/drop to watches.

--- a/ide/packages/idedebugger/localsdlg.lfm
+++ b/ide/packages/idedebugger/localsdlg.lfm
@@ -18,6 +18,8 @@ object LocalsDlg: TLocalsDlg
     Width = 500
     Align = alClient
     DefaultNodeHeight = 19
+    DragMode = dmAutomatic
+    DragType = dtVCL
     Header.AutoSizeIndex = 0
     Header.Columns = <    
       item
