--- a/ide/ideoptionsdlg.lfm
+++ b/ide/ideoptionsdlg.lfm
@@ -94,7 +94,7 @@ inherited IDEOptionsDialog: TIDEOptionsDialog
         TabOrder = 0
         FilteredTreeview = CategoryTree
         ExpandAllInitially = True
-        ShowChildrenOfTopLevelMatch = True
+        ShowChildrenOfMatch = True
       end
       object CategoryTree: TTreeView
         Left = 0
